vanilla Devise configuration

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
   </head>
 
   <body>
+    
+    <!-- these are 2 flash messages devise advises by default to put here -->
+    <p class="notice"><%= notice %></p>                                                                                                
+    <p class="alert"><%= alert %></p> 
+    
     <%= yield %>
+    
   </body>
 </html>
