add images to posts; add masonry; removed will-paginate

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,12 @@
-// Place all the styles related to the Posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+  /* Posts on index page */
+
+#posts {
+  margin: 0 auto;
+}
+
+.post-box {
+  img {
+    width: 100%;
+  }
+}
