--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -5,6 +5,8 @@
 
 <%= form_for(@post) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
+    <%= f.label :image %>
+    <%= f.file_field :image %>
     <%= f.label :content %>
     <%= f.text_area :content, placeholder: "Compose new post...", class: 'form-control' %>
   <%= f.submit "Update post", class: "btn btn-primary" %>
