--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,23 @@
 
-<div class="row">
+<div id="posts row">
 
   <% @posts.each do |p| %>
-    <div class="post col-lg-4 col-md-4 col-sm-6 col-xs-12">
-      <p>
-        <%= p.content %>
-        <%= link_to "Show post", post_path(p)%>
+    <div class="post-box col-lg-4 col-md-4 col-sm-6 col-xs-12">
+      <%= image_tag p.image.url(:medium) if p.image.present? %>
+      <%= p.content %>
+      <%= link_to post_path(p) do %>
         <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-      </p>
+      <% end %>
+      <% if current_user %>
+        <%= link_to edit_post_path(p) do %>
+          <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+        <% end %>
+        <%= link_to p, method: :delete,
+                       data: { confirm: "You sure?" }  do %>
+          <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+        <% end %>
+      <% end %>
     </div>
   <% end %>
-
-  <%= will_paginate %>
   
 </div>
