--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,13 @@
-<p>
-  <%= @post.content %>
-  <%= "#{time_ago_in_words(@post.created_at)} ago" %>
-</p>
+<%= "#{time_ago_in_words(@post.created_at)} ago" %>
+<%= image_tag @post.image.url(:medium) if @post.image.present? %>
+<%= @post.content %>
+
+<% if current_user %>
+  <%= link_to edit_post_path(@post) do %>
+    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+  <% end %>
+  <%= link_to @post, method: :delete,
+                 data: { confirm: "You sure?" }  do %>
+    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+  <% end %>
+<% end %>
