--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,22 +1,32 @@
 
-<div id="posts row">
+<div id="posts">
 
   <% @posts.each do |p| %>
-    <div class="post-box col-lg-4 col-md-4 col-sm-6 col-xs-12">
+    <div class="post-box col-lg-4 col-md-4 col-sm-6 col-xs-12 panel panel-default">
       <%= image_tag p.image.url(:medium) if p.image.present? %>
-      <%= p.content %>
-      <%= link_to post_path(p) do %>
-        <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-      <% end %>
-      <% if current_user %>
-        <%= link_to edit_post_path(p) do %>
-          <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+      <div class="panel-body">
+        <div class="navbar-right light-gray">
+          <%= "#{time_ago_in_words(p.created_at)} ago" %>
+        </div>
+        <h3>
+          <%= link_to p.title, p %>
+        </h3>
+        <p>
+          <%= p.content if p.content.present? %>
+        </p>
+        <%= link_to post_path(p) do %>
+          ... read more <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
         <% end %>
-        <%= link_to p, method: :delete,
-                       data: { confirm: "You sure?" }  do %>
-          <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+        <% if current_user %>
+          <%= link_to edit_post_path(p) do %>
+            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+          <% end %>
+          <%= link_to p, method: :delete,
+                         data: { confirm: "You sure?" }  do %>
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+          <% end %>
         <% end %>
-      <% end %>
+      </div>
     </div>
   <% end %>
   
