--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,27 @@
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "About", about_path %></li>
-            <li><%= link_to "FB", '#' %></li>
-            <li><%= link_to "TW", '#' %></li>
-            <li><%= link_to "tmblr", '#' %></li>
-            <li><%= link_to "insta", '#' %></li>
+            <li>
+              <%= link_to "#" do %>
+                <i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "#" do %>
+                <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "#" do %>
+                <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "#" do %>
+                <i class="fa fa-tumblr-square fa-lg" aria-hidden="true"></i>
+              <% end %>
+            </li>
+
             <!-- links for logged in user -->
             <% if user_signed_in? %>
               <li><%= link_to('Log out', destroy_user_session_path, method: :delete) %></li>
