--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="panel panel-default col-lg-9 col-md-9 col-sm-9 col-xs-9">
-  <div class="navbar-right light-gray">
+  <div class="text-muted text-right">
     <%= "#{time_ago_in_words(@post.created_at)} ago" %>
   </div>
   <%= image_tag @post.image.url(:medium) if @post.image.present? %>
