--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -19,3 +19,15 @@
     cursor: pointer;
   }
 }
+
+// class that scales images according to parent html element
+// while keeping the aspect ratio
+.flexible_image_container {
+  img {
+    width: 100%; 
+    height: 100%;
+    max-width: 80vw;
+    max-height: 70vh;
+    object-fit: contain;
+  }
+}
