--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,43 +15,8 @@
       <%= render 'shared/flash_messages' %>
     </div>
       
-    <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
-        <%= link_to "Sascha Kadek", root_path, id: "logo" %>
-        <nav>
-          <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "About", about_path %></li>
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-tumblr-square fa-lg" aria-hidden="true"></i>
-              <% end %>
-            </li>
+    <%= render 'shared/my_navbar' %>
 
-            <!-- links for logged in user -->
-            <% if user_signed_in? %>
-              <li><%= link_to('Log out', destroy_user_session_path, method: :delete) %></li>
-              <li><%= link_to('New post', new_post_path) %></li>
-            <% end %>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    
     <div class="container">
       <%= yield %>
     </div>
