add youtube links to posts, improve design (post show...)

--- a/app/views/shared/_my_navbar.html.erb
+++ b/app/views/shared/_my_navbar.html.erb
@@ -17,17 +17,17 @@
           <% end %>
         </li>
         <li>
-          <%= link_to "#" do %>
+          <%= link_to "https://twitter.com/saschakadek" do %>
             <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>
           <% end %>
         </li>
         <li>
-          <%= link_to "#" do %>
+          <%= link_to "https://www.instagram.com/sascha.kadek" do %>
             <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
           <% end %>
         </li>
         <li>
-          <%= link_to "#" do %>
+          <%= link_to "https://saschakadek.tumblr.com/" do %>
             <i class="fa fa-tumblr-square fa-lg" aria-hidden="true"></i>
           <% end %>
         </li>
@@ -37,8 +37,7 @@
           <li><%= link_to('Log out', destroy_user_session_path, method: :delete) %></li>
           <li><%= link_to('New post', new_post_path) %></li>
         <% end %>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
+        
       </ul>
     </div>
   </div>
