--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,1 +1,13 @@
-This is a project Geborgen from Sascha Kadek.
+<div class="panel panel-default
+            col-lg-8 col-lg-offset-2
+            col-md-8 col-md-offset-2
+            col-sm-10 col-sm-offset-1
+            col-xs-10 col-xs-offset-1">
+
+  <p>
+    <% 666.times do %>
+      Into the deepest darkest depths to see the light.
+    <% end %>
+  </p>
+
+</div>
