--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -31,3 +31,10 @@ $light-gray: #666;
 body {
   padding-top: 60px;
 }
+
+iframe {
+  width: 100vw;    /* width:height = 16:9 */
+  height: 56.25vw; /* 100/56.25 = 560/315 = 1.778 */
+  max-width: 100%;
+  max-height: 70vh;
+}
