--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,6 +12,9 @@
           <p>
             <%= p.content if p.content.present? %>
           </p>
+          <p>
+            <%= p.video_link if p.video_link.present? %>
+          </p>
           <%= link_to post_path(p) do %>
             ... read more <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
           <% end %>
