--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,8 +6,14 @@
 
 <%= form_for(@post) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
+    <%= f.label :title %>
+    <%= f.text_area :title, placeholder: "Compose new title...", class: 'form-control' %>
+    <%= f.label :image %>
+    <%= f.file_field :image %>
     <%= f.label :content %>
     <%= f.text_area :content, placeholder: "Compose new post...", class: 'form-control' %>
+    <%= f.label :video_link %>
+    <%= f.text_area :video_link, placeholder: "Paste a link to the video...", class: 'form-control' %>
   <%= f.submit "Create post", class: "btn btn-primary" %>
 <% end %>
 </p>
