--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,8 @@
-<div class="panel panel-default col-lg-9 col-md-9 col-sm-9 col-xs-9">
+<div class="panel panel-default
+            col-lg-8 col-lg-offset-2
+            col-md-8 col-md-offset-2
+            col-sm-10 col-sm-offset-1
+            col-xs-10 col-xs-offset-1">
   <div class="text-muted text-right">
     <%= "#{time_ago_in_words(@post.created_at)} ago" %>
   </div>
@@ -6,6 +10,11 @@
     <div class="flexible_image_container">
       <%= image_tag @post.image.url(:medium) if @post.image.present? %>
     </div>
+    <% if @post.video_link %>
+    <iframe src="https://www.youtube.com/embed/<%= @youtube_video_id %>" frameborder="0" allowfullscreen></iframe>
+    <% end %>
+
+  </div>
     <h1>
       <%= @post.title %>
     </h1>
