--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,28 +1,30 @@
 
 <div id="posts" class="transitions-enabled">
 
-  <% @posts.each do |p| %>
+  <% @posts.each do |post| %>
     <div class="post-box col-lg-4 col-md-4 col-sm-6 col-xs-12">
       <div class="panel panel-default">
-        <%= image_tag p.image.url(:medium) if p.image.present? %>
+        <%= image_tag post.image.url(:medium) if post.image.present? %>
+        <% if post.video_link.present? %>
+          <div id="iframe_fix">
+            <iframe src="https://www.youtube.com/embed/<%= extract_youtube_video_id(post.video_link) %>" frameborder="0" allowfullscreen></iframe>
+          </div>
+        <% end %>
         <div class="panel-body">
           <h4>
-            <%= link_to p.title, p %>
+            <%= link_to post.title, post %>
           </h4>
           <p>
-            <%= p.content if p.content.present? %>
+            <%= post.content if post.content.present? %>
           </p>
-          <p>
-            <%= p.video_link if p.video_link.present? %>
-          </p>
-          <%= link_to post_path(p) do %>
+          <%= link_to post_path(post) do %>
             ... read more <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
           <% end %>
           <% if current_user %>
-            <%= link_to edit_post_path(p) do %>
+            <%= link_to edit_post_path(post) do %>
               <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
             <% end %>
-            <%= link_to p, method: :delete,
+            <%= link_to post, method: :delete,
                            data: { confirm: "You sure?" }  do %>
               <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
             <% end %>
