--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,15 +3,13 @@
             col-md-8 col-md-offset-2
             col-sm-10 col-sm-offset-1
             col-xs-10 col-xs-offset-1">
-  <div class="text-muted text-right">
-    <%= "#{time_ago_in_words(@post.created_at)} ago" %>
-  </div>
+
   <div class="panel-body">
     <div class="flexible_image_container">
-      <%= image_tag @post.image.url(:medium) if @post.image.present? %>
+      <%= image_tag @post.image.url(:original) if @post.image.present? %>
     </div>
-    <% if @post.video_link %>
-    <iframe src="https://www.youtube.com/embed/<%= @youtube_video_id %>" frameborder="0" allowfullscreen></iframe>
+    <% if @post.video_link.present? %>
+      <iframe src="https://www.youtube.com/embed/<%= extract_youtube_video_id(@post.video_link) %>" frameborder="0" allowfullscreen></iframe>
     <% end %>
 
   </div>
@@ -32,4 +30,5 @@
       <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
     <% end %>
   <% end %>
+
 </div>
