--- a/app/views/shared/_my_navbar.html.erb
+++ b/app/views/shared/_my_navbar.html.erb
@@ -6,14 +6,26 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
+
       <%= link_to "Sascha Kadek", root_path, id: "logo" %>
+
+          <ul class="nav navbar-nav navbar-left">
+            <li><%= link_to "About", about_path %></li>
+
+            <!-- links for logged in user -->
+            <% if user_signed_in? %>
+              <li><%= link_to('New post', new_post_path) %></li>
+              <li><%= link_to('Log out', destroy_user_session_path, method: :delete) %></li>
+            <% end %>
+
+          </ul>
+        
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "About", about_path %></li>
         <li>
-          <%= link_to "#" do %>
-            <i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i>
+          <%= link_to "https://www.youtube.com/channel/UCpSOiIkr8a0BR_mMj8v-f-w" do %>
+            <i class="fa fa-youtube fa-lg" aria-hidden="true"></i>
           <% end %>
         </li>
         <li>
@@ -32,11 +44,6 @@
           <% end %>
         </li>
 
-        <!-- links for logged in user -->
-        <% if user_signed_in? %>
-          <li><%= link_to('Log out', destroy_user_session_path, method: :delete) %></li>
-          <li><%= link_to('New post', new_post_path) %></li>
-        <% end %>
         
       </ul>
     </div>
