--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,10 +4,6 @@
             col-sm-10 col-sm-offset-1
             col-xs-10 col-xs-offset-1">
 
-  <p>
-    <% 666.times do %>
-      Into the deepest darkest depths to see the light.
-    <% end %>
-  </p>
+  <p>this is a placeholder txt</p>
 
 </div>
