--- a/app/views/shared/_my_navbar.html.erb
+++ b/app/views/shared/_my_navbar.html.erb
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
+
   <div class="container">
+
     <div class="navbar-header">
+
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -9,19 +12,24 @@
 
       <%= link_to "Sascha Kadek", root_path, id: "logo" %>
 
-          <ul class="nav navbar-nav navbar-left">
-            <li><%= link_to "About", about_path %></li>
+      <ul class="nav navbar-nav navbar-left pull-left">
+        <li>
+          <%= link_to about_path do %>
+             About <i class="fa fa-info-circle" aria-hidden="true"></i>
+          <% end %>
+        </li>
 
-            <!-- links for logged in user -->
-            <% if user_signed_in? %>
-              <li><%= link_to('New post', new_post_path) %></li>
-              <li><%= link_to('Log out', destroy_user_session_path, method: :delete) %></li>
-            <% end %>
-
-          </ul>
+        <!-- links for logged in user -->
+        <% if user_signed_in? %>
+          <li><%= link_to('New post', new_post_path) %></li>
+          <li><%= link_to('Log out', destroy_user_session_path, method: :delete) %></li>
+        <% end %>
+      </ul>
         
     </div>
+
     <div class="collapse navbar-collapse" id="myNavbar">
+
       <ul class="nav navbar-nav navbar-right">
         <li>
           <%= link_to "https://www.youtube.com/channel/UCpSOiIkr8a0BR_mMj8v-f-w" do %>
@@ -43,9 +51,8 @@
             <i class="fa fa-tumblr-square fa-lg" aria-hidden="true"></i>
           <% end %>
         </li>
-
-        
       </ul>
+
     </div>
   </div>
 </nav>
