--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,9 +1,31 @@
-<div class="panel panel-default
-            col-lg-8 col-lg-offset-2
+<div class="col-lg-8 col-lg-offset-2
             col-md-8 col-md-offset-2
             col-sm-10 col-sm-offset-1
             col-xs-10 col-xs-offset-1">
 
-  <p>this is a placeholder txt</p>
+  <div class="panel panel-default">
+
+    <div class="panel-body">
+      <p>This page is a part of an audio-visual project <strong>'Geborgen'</strong>.</p>
+      <h1>geborgen [ɡəˈbɔʁɡən] ge‧bor‧gen</h1>
+      A german word meaning 'safe; snug; secure; protected and hidden away from dangers'
+      <div class="flexible_image_container about-page-image">
+        <%= image_tag("tunnel.jpg") %>
+      </div>
+      <p>
+        The project consists of various videos, images and writings created
+        from the late 2016 onwards in a small city in Europe. It is imagined as
+        'a journey into the dark in order to see the light'. I hope you enjoy
+        it as much as I'm enjoying making it. If you have any comments or
+        questions, please don't hesitate to reach out.
+      </p>
+      <p style="margin-right: 75px;" class="text-right">
+        all the best, Sascha
+        <br/>
+        <small>17th of January, 2017</small>
+      </p>
+    </div>
+
+  </div>
 
 </div>
