--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -55,3 +55,10 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0px;
   font-family: "Times New Roman", Times, serif;
 }
+
+.static-image {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-top: 2px solid #000;
+  border-bottom: 2px solid #000;
+}
