add subtitle to posts

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -56,7 +56,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Times New Roman", Times, serif;
 }
 
-.static-image {
+.about-page-image {
   margin-top: 20px;
   margin-bottom: 20px;
   border-top: 2px solid #000;
