--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -8,6 +8,8 @@
   <%= render 'shared/error_messages', object: f.object %>
     <%= f.label :title %>
     <%= f.text_area :title, placeholder: "Compose new title...", class: 'form-control' %>
+    <%= f.label :subtitle %>
+    <%= f.text_area :subtitle, placeholder: "Compose new subtitle...", class: 'form-control' %>
     <%= f.label :image %>
     <%= f.file_field :image %>
     <%= f.label :content %>
