--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
             <%= post.title %>
           </h3>
           <p>
-            <%= post.content if post.content.present? %>
+            <%= post.subtitle if post.subtitle.present? %>
           </p>
           <%= link_to post_path(post) do %>
             <div class="text-right">
