--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -62,3 +62,11 @@ h1, h2, h3, h4, h5, h6 {
   border-top: 2px solid #000;
   border-bottom: 2px solid #000;
 }
+
+.social-media-buttons {
+  margin-top: 20px;
+  margin-right: 20px;
+  margin-bottom: 10px;
+  padding-top: 20px;
+  border-top: 2px solid #1b1b1b;
+}
