remove images created via testing from git

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -14,10 +14,8 @@
       </div>
       <p>
         The project consists of various videos, images and writings created
-        from the late 2016 onwards in a small city in Europe. It is imagined as
-        'a journey into the dark in order to see the light'. I hope you enjoy
-        it as much as I'm enjoying making it. If you have any comments or
-        questions, please don't hesitate to reach out.
+        from the late 2016 onwards in various parts of Europe. If you have any
+        comments or questions, please don't hesitate to reach out.
       </p>
       <p style="margin-right: 75px;" class="text-right">
         all the best, Sascha
