--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -23,6 +23,8 @@
 // class that scales images according to parent html element
 // while keeping the aspect ratio
 .flexible_image_container {
+  //background-color: #545454;
+  background-color: black;
   img {
     width: 100%; 
     height: 100%;
