--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,21 +1,32 @@
+<div class="col-lg-8 col-lg-offset-2
+            col-md-8 col-md-offset-2
+            col-sm-10 col-sm-offset-1
+            col-xs-10 col-xs-offset-1">
 
-<h1>
-  New post
-</h1>
-<p>
+  <div class="panel panel-default">
 
-<%= form_for(@post) do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
-    <%= f.label :title %>
-    <%= f.text_area :title, placeholder: "Compose new title...", class: 'form-control' %>
-    <%= f.label :subtitle %>
-    <%= f.text_area :subtitle, placeholder: "Compose new subtitle...", class: 'form-control' %>
-    <%= f.label :image %>
-    <%= f.file_field :image %>
-    <%= f.label :content %>
-    <%= f.text_area :content, placeholder: "Compose new post...", class: 'form-control' %>
-    <%= f.label :video_link %>
-    <%= f.text_area :video_link, placeholder: "Paste a link to the video...", class: 'form-control' %>
-  <%= f.submit "Create post", class: "btn btn-primary" %>
-<% end %>
-</p>
+    <div class="panel-body">
+      <h1>
+        New post
+      </h1>
+
+      <%= form_for(@post) do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
+        <%= f.label :image %>
+        <%= f.file_field :image %>
+        <%= f.label :video_link %>
+        <%= f.text_field :video_link, placeholder: "Paste a link to the video...", class: 'form-control' %>
+        <hr/>
+        <%= f.label :title %>
+        <%= f.text_field :title, placeholder: "Compose new title...", class: 'form-control' %>
+        <%= f.label :subtitle %>
+        <%= f.text_field :subtitle, placeholder: "Compose new subtitle...", class: 'form-control' %>
+        <hr/>
+        <%= f.label :content %>
+        <%= f.text_area :content, placeholder: "Compose new post...", class: 'form-control' %>
+        <%= f.submit "Create post", class: "btn btn-primary" %>
+      <% end %>
+  
+    </div>
+  </div>
+</div>
