--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -7,17 +7,14 @@
 .post-box {
   img {
     width: 100%;
+  }&:hover {
+    cursor: pointer;
   }
+
 }
 
 .panel {
   background-color: #fcfcfc;
-}
-
-.post-box {
-  &:hover {
-    cursor: pointer;
-  }
 }
 
 // class that scales images according to parent html element
