--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,17 +19,8 @@
           </p>
           <%= link_to post_path(post) do %>
             <div class="text-right">
-              read more <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+              Read more <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
             </div>
-          <% end %>
-          <% if current_user %>
-            <%= link_to edit_post_path(post) do %>
-              <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-            <% end %>
-            <%= link_to post, method: :delete,
-                           data: { confirm: "You sure?" }  do %>
-              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-            <% end %>
           <% end %>
         </div>
       </div>
