resize all images to under 1mb

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -10,7 +10,7 @@
       <h1>geborgen [ɡəˈbɔʁɡən] ge‧bor‧gen</h1>
       A german word meaning 'safe; snug; secure; protected and hidden away from dangers'
       <div class="flexible_image_container about-page-image">
-        <%= image_tag("tunnel.jpg") %>
+        <%= image_tag("tunnel.gif") %>
       </div>
       <p>
         The project consists of various videos, images and writings created
